--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Your Name</title>
+    <title>Portfolio - Laxmi</title>
     <!-- link css -->
     <link rel="stylesheet" href="./styles.css">
 </head>
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="container navigation">
-            <h1>Your Name</h1>
+            <h1>Laxmi</h1>
             <input type="checkbox" id="menu">
             <label for="menu" id="menu-box">
                 <div id="open" class="menu-bar">
@@ -42,7 +42,7 @@
                 <div>
                     <h1>
                         <span>Hi,</span>
-                        <span>I'am <span id="name">Your name</span> </span>
+                        <span>I'am <span id="name">Laxmi</span> </span>
                         <span>Web Developer</span>
                     </h1>
                     <button>
@@ -61,7 +61,7 @@
                     <div id="about-content">
                         <img src="./images/portrait.jpg" alt="portrait-image">
                         <div>
-                            <h3>I am Your name</h3>
+                            <h3>I am Laxmi</h3>
                             <p>
                                 I am a Software Engineer.I lives in Mahalingpur, Karnataka, IND. I loves to code and
                                 build
@@ -134,7 +134,7 @@
                 <div>
                     <h2>Contact</h2>
                     <div>
-                        <form action="mailto:your-email@example.com">
+                        <form action="laxminagaral31@gmail.com">
                             <input type="text" placeholder="Name">
                             <input type="text" placeholder="Email">
                             <textarea name="message">
@@ -150,11 +150,11 @@
     </main>
     <footer>
         <div>
-            <h4>Your Name</h4>
+            <h4>Laxmi</h4>
             <div id="social-links">
-                <a href="https://www.instagram.com/yourid" target="_blank">Instagram</a>
-                <a href="https://www.facebook.com/yourid" target="_blank">Facebook</a>
-                <a href="https://www.linkedin.com/in/yourid" target="_blank">LinkedIn</a>
+                <a href="https://www.instagram.com/laxmi_nagaral_03" target="_blank">Instagram</a>
+                <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+                <a href="https://www.linkedin.com/in/" target="_blank">LinkedIn</a>
             </div>
             <p>&copy; 2025 copyright all right reserved</p>
         </div>
